<resources>
    <string name="demo_app_name">Fiori Demo</string>
    <string name="demo_app_name_full">Fiori Preview</string>
    <string name="download">Download</string>
    <string name="more">More</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="avatar">Avatar</string>
    <string name="none">None</string>
    <string name="app_name">Demo</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="star">Star</string>
    <string name="views">Views</string>
    <string name="views_desc">Compound components that consist of a group of existing controls</string>
    <string name="listcells">List Cells</string>
    <string name="listcells_desc">Items that can be put into a list</string>
    <string name="objectcell">Object Cell</string>
    <string name="objectcell_desc">A list item that shows a business object</string>
    <string name="title_activity_base_object_cell">Standard Object Cell</string>
    <string name="title_activity_base_object_cell_desc">3-line height/1 status/with action.</string>
    <string name="title_activity_grid_table">Grid Table</string>
    <string name="title_activity_grid_table_desc">Grid Table on tablet and Object Cell on phone.</string>
    <string name="object_header_headline">This is a title on the first line</string>
    <string name="object_header_subheadline">Job 000001</string>
    <string name="object_header_body">3475 Deer Creek Rd, Palo Alto</string>
    <string name="object_header_footnote">Due on 12/31/16</string>
    <string name="object_header_tag1">Started</string>
    <string name="object_header_tag2">PM01</string>
    <string name="object_header_tag3">103-Repair</string>
    <string name="object_header_description">Temperature sensor predicts overheating failure in 4 days. Urgent and needs attention. Follow standard protocol for inspecting and repairing equipment in critical condition.</string>
    <string name="object_header_status">High</string>
    <string name="object_header_image_desc">Object Header Image</string>
    <string name="object_header_setting_image">Image</string>
    <string name="object_header_setting_character_image">Character Image</string>
    <string name="object_header_setting_sub_headline">Sub Headline</string>
    <string name="object_header_setting_analytics">Detail</string>
    <string name="object_header_setting_description">Description</string>
    <string name="object_header_setting_tags">Tags</string>
    <string name="object_header_setting_body">Body</string>
    <string name="object_header_setting_footnote">Footnote</string>
    <string name="object_header_setting_status">Status</string>
    <string name="menu2">Menu 2</string>
    <string name="pref_profile_header_image">Profile Image</string>
    <string name="pref_profile_header_image_on">Show profile image. Highly recommended.</string>
    <string name="pref_profile_header_image_off">Profile image placeholder.</string>
    <string name="pref_profile_header_name">Profile Name</string>
    <string name="pref_profile_header_name_long">Long name will wrap into 2 lines if necessary.</string>
    <string name="pref_profile_header_name_short">Short name</string>
    <string name="pref_profile_header_title">Profile Title</string>
    <string name="pref_profile_header_title_on">Show profile title</string>
    <string name="pref_profile_header_title_off">Do not show profile title</string>
    <string name="pref_profile_header_actions">Contact Action Icons</string>
    <string name="profile_header_actions_summary">Number of contact action icons: %s</string>
    <string name="pref_profile_header_action">Profile Action</string>
    <string name="pref_profile_header_action_on">Show profile action. (Hides contact action icons)</string>
    <string name="pref_profile_header_action_off">Do not show profile action</string>
    <string name="pref_profile_header_description">Profile Description</string>
    <string name="settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_welcome_screen_type">Welcome screen type</string>
    <string name="pref_default_reader_barcode_format_list_value">256</string>
    <string name="pref_title_reader_barcode_format_list">Barcode formats</string>
    <string name="pref_title_enable_demo">Enable demo</string>
    <string name="pref_description_enable_demo">Demo mode available</string>
    <string name="pref_header_passcode_process">Passcode</string>
    <string name="pref_title_null_policy_enabled">Null Policy</string>
    <string name="pref_title_skip_passcode_enabled">Skip enabled</string>
    <string name="pref_header_passcode_policy">Passcode policy</string>
    <string name="pref_title_min_length">Minimal length</string>
    <string name="pref_description_min_length">The minimum number of characters the passcode has to contain</string>
    <string name="pref_title_min_unique">Minimal unique</string>
    <string name="pref_description_min_unique">The minimum number of unique characters the passcode has to contain</string>
    <string name="pref_title_has_digit">Mandatory number character</string>
    <string name="pref_description_has_digit">The passcode has to contain at least one number</string>
    <string name="pref_title_has_lower">Mandatory lowercase letter</string>
    <string name="pref_description_has_lower">The passcode has to contain at least one lowercase letter</string>
    <string name="pref_title_has_upper">Mandatory uppercase letter</string>
    <string name="pref_description_has_upper">The passcode has to contain at least one uppercase letter</string>
    <string name="pref_title_has_special">Mandatory special character</string>
    <string name="pref_description_has_special">The passcode has to contain at least one special character</string>
    <string name="pref_title_retry_limit">Retry limit</string>
    <string name="pref_description_retry_limit">The maximum number of invalid passcodes</string>
    <string name="pref_title_is_digit_only">Passcode consisting only from digits</string>
    <string name="pref_description_is_digit_only">The passcode should contain only decimal numbers</string>
    <string name="pref_header_qrcode_confirm">QR code confirm</string>
    <string name="pref_header_qrcode_read">QR code read</string>
    <string name="pref_title_qr_read_failure_title">Enter the title if the qr code is invalid</string>
    <string name="pref_default_qr_read_failure_title">@string/qr_confirm_failure_title</string>
    <string name="pref_title_qr_read_failure_message">Enter the message if the qr code is invalid</string>
    <string name="pref_default_qr_read_failure_message">@string/qr_confirm_failure_detailed_message</string>
    <string name="pref_title_qr_read_action_handler">QR Code Reader action handler</string>
    <string name="pref_default_qr_read_action_handler">com.sap.cloud.mobile.fiori.demo.onboarding.QRCodeReaderActionHandlerImpl</string>
    <string name="pref_title_qr_read_confirm_activity">QR Code Reader Custom Confirm Activity</string>
    <string name="pref_title_qr_read_failure_continue">Enter name of the continue button</string>
    <string name="pref_default_qr_read_failure_continue">@string/qr_confirm_continue_title</string>
    <string name="pref_title_qr_read_autofocus">Toggle to use the camera autofocus</string>
    <string name="pref_title_qr_read_skip_confirm">Skip confirm screen</string>
    <string name="pref_title_qr_read_wait_for_barcode_detector">Wait for detector in sec</string>
    <string name="pref_description_qr_read_wait_for_barcode_detector">Enter the amount of wait for barcode detector in seconds</string>
    <string name="pref_default_qr_read_wait_for_barcode_detector">20</string>
    <string name="pref_header_fingerprint">Fingerprint</string>
    <string name="pref_header_fingerprint_ui">Fingerprint UI</string>
    <string name="pref_header_eula_screen">EULA screen settings</string>
    <string name="pref_title_eula">Enter the EULA screen headline</string>
    <string name="pref_button_confirm_eula">Enter the EULA screen agree button label</string>
    <string name="pref_default_button_confirm_eula">@string/eula_button_confirm</string>
    <string name="pref_button_reject_eula">Enter the EULA screen disagree button label</string>
    <string name="pref_default_button_reject_eula">@string/eula_button_reject</string>
    <string name="pref_url_eula">Enter the destinaton of the EULA url</string>
    <string name="pref_default_url_eula">file:///android_asset/eula.html</string>
    <string name="pref_header_launchscreen">Launch screen settings</string>
    <string name="pref_headline_launchscreen">Enter the Launch screen headline</string>
    <string name="pref_default_headline_launchscreen">Project Companion \n for Managers</string>
    <string name="pref_images_launchscreen">Feature images (separate with semicolon / use 0 to hide picture)</string>
    <string name="pref_default_images_launchscreen">graphic_cloud_3x;graphic_key_3x;0;0</string>
    <string name="pref_titles_launchscreen">Feature titles (separate with semicolon)</string>
    <string name="pref_default_titles_launchscreen">Unlimited Storage;Premium Access;Premium Access;Send feedback</string>
    <string name="pref_descriptions_launchscreen">Feature descriptions (separate with semicolon)</string>
    <string name="pref_default_descriptions_launchscreen">Production Manager provides you unlimited data storage to manage all of your data which is growing everyday!;It gives you an unlimited access to the SAP cloud system which allows you to access countless data and to download to your local devices. It can sync to maximum 3 different devices with fully functioned features.;It gives you an unlimited access to the SAP cloud system which allows you to access countless data and to download to your local devices. It can sync to maximum 3 different devices with fully functioned features. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English.;Customers ideas and feedback help us improve our current offerings and shape future software and services.</string>
    <string name="pref_button_primary_launchscreen">Launch screen primary button label</string>
    <string name="pref_default_button_primary_launchscreen">@string/launchscreen_button_primary</string>
    <string name="pref_button_demo_launchscreen">Launch screen demo button label</string>
    <string name="pref_default_button_demo_launchscreen">@string/launchscreen_button_demo</string>
    <string name="pref_url_termsofservice_launchscreen">Footnote "Terms of Service" URL</string>
    <string name="pref_default_url_termsofservice_launchscreen">https://cloudplatform.sap.com/</string>
    <string name="pref_url_privacy_launchscreen">Footnote "Privacy policy" URL</string>
    <string name="pref_default_url_privacy_launchscreen">http://sap.com</string>
    <string name="pref_animation_interval_launchscreen">Animation Interval (millisec)</string>
    <string name="pref_header_activation_email">Activation (email) settings</string>
    <string name="pref_header_activation_choose">Activation (choose an option) settings</string>
    <string name="pref_header_activation_discovery">Activation (discovery service) settings</string>
    <string name="pref_header_activation_barcode">Activation (qr code scanner) settings</string>
    <string name="pref_activation_title">Title</string>
    <string name="pref_activation_instruction">Instruction</string>
    <string name="pref_activation_barcode_button">QR Code Scan button title</string>
</resources>