<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:persistent="false">
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/settings"
        android:key="pref_key_storage_profile_header_settings">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_profile_header_image"
            android:title="@string/pref_profile_header_image"
            android:summaryOn="@string/pref_profile_header_image_on"
            android:summaryOff="@string/pref_profile_header_image_off"
            android:defaultValue="true"
            />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_profile_header_name"
            android:title="@string/pref_profile_header_name"
            android:summaryOn="@string/pref_profile_header_name_long"
            android:summaryOff="@string/pref_profile_header_name_short"
            android:defaultValue="false"
            />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_profile_header_title"
            android:title="@string/pref_profile_header_title"
            android:summaryOn="@string/pref_profile_header_title_on"
            android:summaryOff="@string/pref_profile_header_title_off"
            android:defaultValue="true"
            />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_profile_header_action"
            android:title="@string/pref_profile_header_action"
            android:summaryOn="@string/pref_profile_header_action_on"
            android:summaryOff="@string/pref_profile_header_action_off"
            android:defaultValue="false"
            />
        <android.support.v7.preference.ListPreference
            android:key="pref_profile_header_description"
            android:title="@string/pref_profile_header_description"
            android:dialogTitle="@string/pref_profile_header_description"
            android:entries="@array/pref_profile_header_description_entries"
            android:entryValues="@array/pref_profile_header_description_values"
            android:defaultValue="LONG"
            android:summary="%s"/>
        <android.support.v7.preference.ListPreference
            android:key="pref_profile_header_actions"
            android:title="@string/pref_profile_header_actions"
            android:dialogTitle="@string/pref_profile_header_actions"
            android:entries="@array/pref_profile_header_action_entries"
            android:entryValues="@array/pref_profile_header_action_values"
            android:defaultValue="4"
            android:summary="@string/profile_header_actions_summary"/>
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>