<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".object.ObjectHeaderActivity">

    <item
        android:id="@+id/menu_placeholder2"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/menu2"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/menu_image"
        android:title="@string/object_header_setting_image"
        android:checkable="true"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_character_image"
        android:title="@string/object_header_setting_character_image"
        android:checkable="true"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_sub_headline"
        android:title="@string/object_header_setting_sub_headline"
        android:checkable="true"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_tags"
        android:title="@string/object_header_setting_tags"
        android:checkable="true"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_body"
        android:title="@string/object_header_setting_body"
        android:checkable="true"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_footnote"
        android:title="@string/object_header_setting_footnote"
        android:checkable="true"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_description"
        android:title="@string/object_header_setting_description"
        android:checkable="true"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_analytics"
        android:title="@string/object_header_setting_analytics"
        android:checkable="true"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/menu_status"
        android:title="@string/object_header_setting_status"
        android:checkable="true"
        app:showAsAction="never">
    </item>
</menu>
