<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="eula_screen_headline"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_eula" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_button_confirm_eula"
        android:inputType="textCapWords"
        android:key="eula_screen_button_confirm"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_button_confirm_eula" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_button_reject_eula"
        android:inputType="textCapWords"
        android:key="eula_screen_button_reject"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_button_reject_eula" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_url_eula"
        android:inputType="textCapWords"
        android:key="eula_screen_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_url_eula" />

</PreferenceScreen>
